# python-bokamera-client

./: .gitignore  README.md  pyproject.toml
bokamera/: __init__.py  _client.py  _json.py  auth.py  client.py  exceptions.py
bokamera/models/: __init__.py  articles.py  billing.py  bookings.py  codelock.py  common.py  companies.py  custom_fields.py  customers.py  eaccounting.py  gdpr.py  homepage.py  licenses.py  rebate_codes.py  resources.py  schedules.py  services.py  support.py  users.py  webhooks.py
bokamera/resources/: __init__.py  articles.py  billing.py  bookings.py  codelock.py  companies.py  custom_fields.py  customers.py  eaccounting.py  gdpr.py  homepage.py  licenses.py  rebate_codes.py  resources.py  schedules.py  services.py  support.py  system.py  users.py  webhooks.py
tests/: conftest.py  test_client.py  test_models.py
tests/test_resources/: test_articles.py  test_billing.py  test_bookings.py  test_codelock.py  test_companies.py  test_custom_fields.py  test_customers.py  test_eaccounting.py  test_gdpr.py  test_homepage.py  test_licenses.py  test_rebate_codes.py  test_resources.py  test_schedules.py  test_services.py  test_support.py  test_system.py  test_users.py  test_webhooks.py
