[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bokamera"
version = "0.1.0"
description = "Typed Python client library for the BokaMera API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["bokamera"]
